--- a/Training01/AndroidManifest.xml
+++ b/Training01/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:label="@string/title_activity_details" >
         </activity>
         <activity
-            android:name="com.example.training01.NovaAtividade"
+            android:name="com.example.training01.NewTask"
             android:label="@string/title_activity_nova_atividade" >
         </activity>
     </application>
